height to max-height on image to prevent squash

--- a/JOSTS/static/app/content/site.css
+++ b/JOSTS/static/app/content/site.css
@@ -104,7 +104,7 @@ input[type="checkbox"].input-validation-error {
     z-index: 101;
 }
 .detail-image {
-    height: 200px;
+    max-height: 200px;
     overflow: hidden;
 }
 .detail-sym {
